--- a/dashboard.Rmd
+++ b/dashboard.Rmd
@@ -26,7 +26,7 @@ instacart_df = count(instacart, aisle) %>%
 Column {data-width=650}
 -----------------------------------------------------------------------
 
-### Chart A
+### Bar chart: Number of orders from each aisle
 
 ```{r}
 instacart_df %>% 
@@ -38,7 +38,7 @@ instacart_df %>%
 Column {data-width=350}
 -----------------------------------------------------------------------
 
-### Chart B
+### Scatter plot: Number of orders of from each department for each day of week
 
 ```{r}
 instacart %>% 
@@ -48,11 +48,11 @@ instacart %>%
   plot_ly(x = ~day_of_week, y = ~order_number, color = ~department, type = "scatter", mode = "line")
 ```
 
-### Chart C
+### Boxplot: Order hours for each day for each department
 
 ```{r}
 instacart %>% 
-  select(order_number,order_hour_of_day, department) %>%
+  select(order_number, order_hour_of_day, department) %>%
   mutate(department = as.factor(department)) %>%
   plot_ly(y = ~order_hour_of_day, color = ~department, type = "box")
 ```
